Update Job to use inProgress Fix login page spacing

--- a/LandscapingTR/ClientApp/src/app/login/login.component.css
+++ b/LandscapingTR/ClientApp/src/app/login/login.component.css
@@ -5,7 +5,7 @@
 }
 
 .inside-card {
-    margin: 5px;
+    margin: 10px;
 }
 
 .center-container {
